--- a/src/app/account/account.page.html
+++ b/src/app/account/account.page.html
@@ -22,6 +22,6 @@
   </ion-toolbar>
 </ion-header> -->
 
-<app-header></app-header>
+<app-header [title]="title"></app-header>
 
 <ion-content></ion-content>
