--- a/src/app/search/search.page.html
+++ b/src/app/search/search.page.html
@@ -25,7 +25,7 @@
   </ion-toolbar>
 </ion-header> -->
 
-<app-header></app-header>
+<app-header [title]="title"></app-header>
 
 <ion-content>
   <ion-searchbar placeholder="Search Repairman, Profession" cancelButtonIcon="md-arrow-back" ionInput="refreshSearchList($event)"></ion-searchbar>
@@ -63,7 +63,7 @@
         <ion-icon name="hammer"></ion-icon> {{ selectedRepairman.ability }}    
       </ion-col>
       <ion-col size="2">
-        {{ selectedRepairman.stars }} <ion-icon name="star"></ion-icon> 
+        {{ selectedRepairman.stars }} <ion-icon name="star" style="color: #CFB53B;"></ion-icon> 
       </ion-col>
     </ion-row>
     <ion-row margin-vertical padding-start>
