Added payment module before finalizing

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,9 +1,16 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Sign In</ion-title>
+    <ion-title>Repairman</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
-  <ion-button (click)="signIn()">Sign In</ion-button>
+  <div>
+      Taking you to {{ nextPage }}.
+  </div>
+  <div id="wave">
+    <span class="dot"></span>
+    <span class="dot"></span>
+    <span class="dot"></span>
+  </div>
 </ion-content>
