--- a/src/app/repairs/repairs.page.html
+++ b/src/app/repairs/repairs.page.html
@@ -25,7 +25,7 @@
   </ion-toolbar>
 </ion-header> -->
 
-<app-header [title]="title" [shouldShowBackButton]="shouldShowBackButton" (backButtonClick)="unselectRepairman($event)"></app-header>
+<app-header [title]="title"></app-header>
 
 <ion-content>
 
